Last day before thanksgiving break, nov 21

--- a/food.html
+++ b/food.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/product.css">
     <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
     <script src="JS/script.js">
 
@@ -64,13 +64,12 @@
             </div>
         </section>
         <hr>
-       <ul class="link-container">
-       	<li class="link-item"><a class="tablink" href="index.html"> Home</a></li>
-       	<li class="link-item" ><a class="tablink" href="food.html"> Food</a></li>
-       	<li class="link-item"><a class="tablink" href="#"> Tea</a></li>
-       	<li class="link-item"><a class="tablink" href="#"> Coffee</a></li>
-       	<li class="link-item"><a class="tablink" href="#"> Beans</a></li>
-       </ul>
+        <ul class="link-container">
+            <li class="link-item"> <a class="tab-link" href="index.html"> Home</a> </li>
+            <li class="link-item"> <a class="tab-link" href="#"> Coffee</a> </li>
+            <li class="link-item"> <a class="tab-link" href="#"> Tea</a></li>
+            <li class="link-item"> <a class="tab-link" href="#"> Food </a></li>
+        </ul>
     </nav>
     <!-- Nav End-->
 
@@ -82,7 +81,6 @@
         </div>
     </header>
     <!-- InstanceBeginEditable name="Content" -->
-   <section class="product-container">
     <div class="row">
    	<div class="column card">
 <img src="img/Product/alina-karpenko-d8GDJalt_BE-unsplash.jpg" alt="" style="width:100%">
@@ -131,7 +129,7 @@
     </div>
    	<div class="column card">
 <img src="img/Product/madison-kaminski-2c6_d8svbkY-unsplash.jpg" alt="" style="width:100%">
-                <h1> Peanut Butter Blossoms</h1>
+                <h1> PB Blossom</h1>
                 <p class="price">$1.99</p>
                 <p>Hersheys kisses on a peanut butter cookie</p>
                 <p><button>Add to Cart</button></p>
@@ -154,9 +152,9 @@
     </div>
    	<div class="column card">
 <img src="img/Product/oriol-portell-MZxSQPSOexI-unsplash.jpg" alt="" style="width:100%">
-                <h1> Doube Chocolate Muffins</h1>
+                <h1>Chocolate Muffins</h1>
                 <p class="price">$1.99</p>
-                <p>...</p>
+                <p>Double Chocolate</p>
                 <p><button>Add to Cart</button></p>
     </div>
    	<div class="column card">
@@ -167,7 +165,6 @@
                 <p><button>Add to Cart</button></p>
     </div>
 </div>
-   </section>
     <!-- InstanceEndEditable -->
     <footer>
         <div class="footer-content">
