--- a/product-page.html
+++ b/product-page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/product.css">
     <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
     <script src="JS/script.js">
 
@@ -64,13 +64,12 @@
             </div>
         </section>
         <hr>
-       <ul class="link-container">
-       	<li class="link-item"><a class="tablink" href="index.html"> Home</a></li>
-       	<li class="link-item" ><a class="tablink" href="food.html"> Food</a></li>
-       	<li class="link-item"><a class="tablink" href="#"> Tea</a></li>
-       	<li class="link-item"><a class="tablink" href="#"> Coffee</a></li>
-       	<li class="link-item"><a class="tablink" href="#"> Beans</a></li>
-       </ul>
+        <ul class="link-container">
+            <li class="link-item"> <a class="tab-link" href="index.html"> Home</a> </li>
+            <li class="link-item"> <a class="tab-link" href="#"> Coffee</a> </li>
+            <li class="link-item"> <a class="tab-link" href="#"> Tea</a></li>
+            <li class="link-item"> <a class="tab-link" href="#"> Food </a></li>
+        </ul>
     </nav>
     <!-- Nav End-->
 
@@ -82,21 +81,12 @@
         </div>
     </header>
     <!-- InstanceBeginEditable name="Content" -->
-   <section class="product-container">
         <div class="row">
             <div class="card column">
-                <img src="img/Product/akhilesh-sharma-6xtK1Pn-PTI-unsplash.jpg" alt="Black Coffee" style="width:100%">
+                <img src="img/Product/snapbythree-my-g6e641CiHFQ-unsplash.jpg" alt="Black Coffee" style="width:100%">
                 <h1>Black Coffee</h1>
                 <p class="price">$1.99</p>
                 <p>No Sweetening</p>
-                <p><button>Add to Cart</button></p>
-            </div>
-
-            <div class="card column">
-                <img src="img/Product/akhilesh-sharma-6xtK1Pn-PTI-unsplash.jpg" alt="Caramel Frappe" style="width:100%">
-                <h1>Caramel Frappe</h1>
-                <p class="price">$6.99</p>
-                <p>...</p>
                 <p><button>Add to Cart</button></p>
             </div>
             <div class="card column">
@@ -113,6 +103,13 @@
                 <p>...</p>
                 <p><button>Add to Cart</button></p>
             </div>
+            <div class="card column">
+                <img src="img/Product/joshua-flores-5RQffqRkmWQ-unsplash.jpg" alt="">
+                <h1> Blueberry Muffins </h1>
+                <p class="price"> $1.99</p>
+                <p> ...</p>
+                <p><button> Add to Cart</button></p>
+            </div>
         </div>
 
         <div class="row">
@@ -124,7 +121,7 @@
                 <p><button>Add to Cart</button></p>
             </div>
             <div class="card column">
-                <img src="img/Product/" alt="Sweet Tea" style="width:100%">
+                <img src="img/Product/akhilesh-sharma-6xtK1Pn-PTI-unsplash.jpg" alt="Sweet Tea" style="width:100%">
                 <h1>Sweet Tea</h1>
                 <p class="price">$3.99</p>
                 <p>...</p>
@@ -155,9 +152,9 @@
             </div>
             <div class="card column">
                 <img src="img/Product/ari-spada-RCYrA-AiFSo-unsplash.jpg" alt="">
-                <h1> Double Chocolate Muffins</h1>
+                <h1> Chocolate Muffins</h1>
                 <p class="price"> $1.99</p>
-                <p> ...</p>
+                <p>Double Chocolate</p>
                 <p><button> Add to Cart</button></p>
             </div>
             <div class="card column">
@@ -167,15 +164,9 @@
                 <p> ...</p>
                 <p><button> Add to Cart</button></p>
             </div>
-            <div class="card column">
-                <img src="img/Product/joshua-flores-5RQffqRkmWQ-unsplash.jpg" alt="">
-                <h1> Blueberry Muffins </h1>
-                <p class="price"> $1.99</p>
-                <p> ...</p>
-                <p><button> Add to Cart</button></p>
-            </div>
+           
         </div>
-    </section>
+
     <!-- InstanceEndEditable -->
     <footer>
         <div class="footer-content">
