--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
-    <script src="JS/script.js"></script>
+    <script src="script.js"></script>
     <title>Hive Mind</title>
 
 
@@ -58,7 +58,7 @@
                     } 
                 </script>
                 <!-- End Sign up form-->
-                <a class="nav-items"> <img src="img/buttons/cart.png" alt=""></a>
+                <a href="#" class="nav-items"> <img src="img/buttons/cart.png" alt=""></a>
             </div>
         </section>
         <hr>
@@ -66,7 +66,7 @@
             <li class="link-item"> <a class="tab-link" href="index.html"> Home</a> </li>
             <li class="link-item"> <a class="tab-link" href="#"> Coffee</a> </li>
             <li class="link-item"> <a class="tab-link" href="#"> Tea</a></li>
-            <li class="link-item"> <a class="tab-link" href="#"> Food </a></li>
+            <li class="link-item"> <a class="tab-link" href="food.html"> Food </a></li>
         </ul>
     </nav>
     <!-- Nav End-->
@@ -84,7 +84,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/joshua-flores-5RQffqRkmWQ-unsplash.jpg" class="product-thumb" alt=""
+                    <img src="img/Product/joshua-flores.jpg" class="product-thumb" alt=""
                         height="110" width="165">
                     <button class="card-btn add-to-cart" data-id="1">Add to cart</button>
                 </div>
@@ -97,7 +97,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/tabitha-turner-F0Wd4djYvSA-unsplash.jpg" class="product-thumb" alt=""
+                    <img src="img/Product/tabitha-turner.jpg" class="product-thumb" alt=""
                         width="119" height="165">
                     <button class="card-btn add-to-cart" data-id="2">Add to Cart</button>
                 </div>
@@ -110,7 +110,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/manki-kim-L82-kkEBOd0-unsplash.jpg" class="product-thumb" alt="" width="353"
+                    <img src="img/Product/manki-kim.jpg" class="product-thumb" alt="" width="353"
                         height="143">
                     <button class="card-btn add-to-cart" data-id="4">Add to cart</button>
                 </div>
@@ -123,7 +123,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/ann-74NChp1cn5I-unsplash.jpg" class="product-thumb" alt="" width="224"
+                    <img src="img/Product/ann.jpg" class="product-thumb" alt="" width="224"
                         height="224">
                     <button class="card-btn">Add to Cart</button>
                 </div>
@@ -136,7 +136,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/michael-chiara-BLy3LMYMVvE-unsplash.jpg" class="product-thumb" alt=""
+                    <img src="img/Product/michael-chiara.jpg" class="product-thumb" alt=""
                         width="225" height="225">
                     <button class="card-btn">Add to Cart</button>
                 </div>
@@ -149,7 +149,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/valeriia-miller-9kIdbW3Fwuo-unsplash.jpg" class="product-thumb" alt=""
+                    <img src="img/Product/valeriia-miller.jpg" class="product-thumb" alt=""
                         width="225" height="225">
                     <button class="card-btn">Add to Cart</button>
                 </div>
@@ -162,7 +162,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/akhilesh-sharma-6xtK1Pn-PTI-unsplash.jpg" class="product-thumb" alt=""
+                    <img src="img/Product/akhilesh-sharma.jpg" class="product-thumb" alt=""
                         width="750" height="750">
                     <button class="card-btn">Add to Cart</button>
                 </div>
@@ -172,8 +172,8 @@
                     <span class="price">$3.99</span><span class="actual-price"></span>
                 </div>
             </div>
-            <button class="pre-btn"><img src="img/buttons/arrow.png" alt=""></button>
-            <button class="nxt-btn"><img src="img/buttons/arrow.png" alt=""></button>
+            <button class="pre-btn"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 100"><path d="M10.477 0h-8.977l12.024 12-12.024 12h8.977l12.023-12z"/></svg></button>
+            <button class="nxt-btn"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 100"><path d="M10.477 0h-8.977l12.024 12-12.024 12h8.977l12.023-12z"/></svg></button>
             <script>
                 const productContainers = [...document.querySelectorAll('.product-container')];
                 const nxtBtn = [...document.querySelectorAll('.nxt-btn')];
@@ -199,20 +199,18 @@
     <hr class="footer-collection">
     <section class="collection-container">
         <a href="coffee.html" class="collection">
-            <img src="img/Product/tabitha-turner-F0Wd4djYvSA-unsplash.jpg" alt="">
-        </a>
-        <a href="#Tea" class="collection">
-            <img src="img/thumbnails/yanaSm.jpg" alt="">
-            <button class="tablink collection-title" onclick="openPage('Tea', this)">Tea</button>
-        </a>
-        <a href="food.html" class="collection">
-            <img src="img/Product/ari-spada-RCYrA-AiFSo-unsplash.jpg" alt="">
-            <button class="tablink collection-title" onclick="openPage('Food', this)">Food</button>
+            <img src="img/Product/tabitha-turner.jpg" alt="">
         </a>
         <a href="#" class="collection">
-            <img src="img/Product/pablo-merchan-montes-SCbq6uKCyMY-unsplash.jpg" alt="">
-            <button class="collection-title" onclick="openPage('Beans', this)">Beans</button>
-        </a><a href="#" class="collection">
+            <img src="img/Product/yana.jpg" alt="">
+        </a>
+        <a href="food.html" class="collection">
+            <img src="img/Product/ari-spada.jpg" alt="">
+        </a>
+        <a href="#" class="collection">
+            <img src="img/Product/pablo-merchan-montes.jpg" alt="">
+        </a>
+        <a href="#" class="collection">
         </a>
     </section>
     </div>
